--- a/index.html
+++ b/index.html
@@ -187,6 +187,48 @@
             </div>
         </div>
         </section>
+<!-- Profil Pembuat Website -->
+<section class="page-section bg-light" id="profile">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">Profil Pembuat Website</h2>
+      <h3 class="section-subheading text-muted">Mahasiswa Teknik Geomatika UPN "Veteran" Yogyakarta</h3>
+    </div>
+    
+    <div class="row justify-content-center">
+      <div class="col-lg-4 text-center">
+        <!-- Foto Profil -->
+        <img src="assets/img/profile.jpg" 
+             alt="Foto Pembuat Website" 
+             class="rounded-circle img-fluid shadow" 
+             style="width: 250px; height: 250px; object-fit: cover; border: 5px solid #1d4655;">
+        
+        <!-- Nama dan Keterangan -->
+        <h4 class="my-3" style="color:#1d4655; margin-top:20px;">Frista Nirmala Sari (117230031)</h4>
+        <p class="text-muted">
+          <p><b>Mahasiswa Program Studi Teknik Geomatika,</b></p>
+          <p><b>Fakultas Teknologi Mineral dan Energi,</b></p>
+          <p><b>UPN "Veteran" Yogyakarta.</b></p>  
+        </p>
+
+        <!-- Kontak tambahan -->
+        <div class="mt-3">
+          <a href="mailto:fristanirmalasari453@gmail.com" class="btn btn-outline-primary btn-sm m-1">
+            <i class="fas fa-envelope"></i> Email
+          </a>
+        <!-- Instagram -->
+          <a href="https://www.instagram.com/fristanmsr_/" target="_blank" class="btn btn-outline-danger btn-sm m-1">
+            <i class="fab fa-instagram"></i> Instagram
+          </a>
+        <!-- LinkedIn -->
+          <a href="https://www.linkedin.com/in/frista-nirmala-sari-31226628b/" target="_blank" class="btn btn-outline-info btn-sm m-1">
+            <i class="fab fa-linkedin"></i> LinkedIn
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
         <!-- Footer-->
         <footer class="footer py-4">
