--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ fetch('assets/geojson/bangunanumum.geojson')
   .then(res => res.json())
   .then(data => {
     L.geoJSON(data, {
-      style: { color: "#1e6395", weight: 1, fillOpacity: 0.6 },
+      style: { color: "#ffc130", weight: 1, fillOpacity: 0.6 },
       onEachFeature: function(feature, layer) {
         layer.on('click', function() {
           var center = layer.getBounds().getCenter();
@@ -422,7 +422,7 @@ fetch('assets/geojson/asramaputri.geojson')
   .then(res => res.json())
   .then(data => {
     L.geoJSON(data, {
-      style: { color: "#1e6395", weight: 1, fillOpacity: 0.6 },
+      style: { color: "#ff6600", weight: 1, fillOpacity: 0.6 },
       onEachFeature: function(feature, layer) {
         layer.on('click', function() {
           var center = layer.getBounds().getCenter();
